// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulateLap (characterization) > produces a stable final classification, including retirements, for a seeded race 1`] = `
[
  {
    "condition": 0,
    "driverId": "d3",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 1,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 1,
    "totalTime": 1252.94,
    "tyre": "medium",
  },
  {
    "condition": 0,
    "driverId": "d5",
    "gap": 19.392,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1272.331,
    "tyre": "soft",
  },
  {
    "condition": 74,
    "driverId": "d4",
    "gap": 3.397,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1275.728,
    "tyre": "medium",
  },
  {
    "condition": 0,
    "driverId": "d6",
    "gap": 3.108,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 4,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1278.836,
    "tyre": "soft",
  },
  {
    "condition": 80,
    "driverId": "d1",
    "gap": 0,
    "laps": 1,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 5,
    "retired": true,
    "retirementLap": 2,
    "stints": 0,
    "totalTime": 100.616,
    "tyre": "medium",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;

exports[`simulateLap (characterization) > records a god-mode forced retirement and classifies the car out of the running 1`] = `
[
  {
    "condition": 0,
    "driverId": "d4",
    "gap": 0,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 1,
    "position": 1,
    "retired": false,
    "retirementLap": null,
    "stints": 1,
    "totalTime": 1251.24,
    "tyre": "medium",
  },
  {
    "condition": 0,
    "driverId": "d5",
    "gap": 23.797,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 2,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1275.037,
    "tyre": "soft",
  },
  {
    "condition": 14,
    "driverId": "d6",
    "gap": 5.402,
    "laps": 12,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 2,
    "position": 3,
    "retired": false,
    "retirementLap": null,
    "stints": 2,
    "totalTime": 1280.439,
    "tyre": "soft",
  },
  {
    "condition": 26,
    "driverId": "d3",
    "gap": 0,
    "laps": 4,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 4,
    "retired": true,
    "retirementLap": 5,
    "stints": 0,
    "totalTime": 409.814,
    "tyre": "medium",
  },
  {
    "condition": 80,
    "driverId": "d1",
    "gap": 0,
    "laps": 1,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 5,
    "retired": true,
    "retirementLap": 2,
    "stints": 0,
    "totalTime": 100.616,
    "tyre": "medium",
  },
  {
    "condition": 100,
    "driverId": "d2",
    "gap": 0,
    "laps": 0,
    "lapsDown": 0,
    "mistakeCount": 0,
    "pitStops": 0,
    "position": 6,
    "retired": true,
    "retirementLap": 1,
    "stints": 0,
    "totalTime": 0.5,
    "tyre": "medium",
  },
]
`;
